src/objects/HubSpot_Inc__HubSpot_Intelligence__c.object
<CustomObject>
    <description>This object makes the connection between a HubSpot Contact and Salesforce.com. Pertinent website visit information is stored here.</description>
    <fields>
        <fullName>HubSpot_Inc__Average_Page_Views__c</fullName>
        <label>Average Page Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Changes__c</fullName>
        <description>This field stores an XML document of changes to be sent to HubSpot.  The XML document is created and maintained by triggers on Lead, Contact, and Opportunity records.</description>
        <label>Outgoing Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Salesforce Contact associated with this record.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HubSpot Intelligence</relationshipLabel>
        <relationshipName>HubSpot_Intelligence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Conversion_Events__c</fullName>
        <label>Conversion Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__First_Conversion_Date__c</fullName>
        <label>First Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__First_Conversion_Event__c</fullName>
        <label>First Conversion Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__First_Visit__c</fullName>
        <label>First Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Found_Site_Via__c</fullName>
        <label>Found Site Via</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__GUID__c</fullName>
        <description>The unique HubSpot ID for this record.</description>
        <label>GUID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Has_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indicator used by HubSpot to query for records that contain XML documents with changed data to be processed by HubSpot which is populated by triggers on the Salesforce objects.</description>
        <label>Has Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__HubSpot_Detail__c</fullName>
        <label>HubSpot Detail</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__IP_Address__c</fullName>
        <label>IP Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__IP_City__c</fullName>
        <label>IP City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__IP_Country__c</fullName>
        <label>IP Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__IP_Domain__c</fullName>
        <label>IP Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__IP_ISP__c</fullName>
        <label>IP ISP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__IP_Latitude__c</fullName>
        <label>IP Latitude</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__IP_Longitude__c</fullName>
        <label>IP Longitude</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__IP_Region__c</fullName>
        <label>IP Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__IP_Time_Zone__c</fullName>
        <label>IP Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__IP_Zip_Code__c</fullName>
        <label>IP Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Incoming_Changes__c</fullName>
        <description>Incoming changes from HubSpot in the form of an XML document.  To see documents passed from HubSpot in the HubSpot Logs, set Logging Level to Debug in HubSpot Settings, otherwise this field will always be cleared by the triggers which process the data.</description>
        <label>Incoming Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Lead_Grade__c</fullName>
        <label>Lead Grade</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Salesforce Lead related to this record.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>HubSpot Intelligence</relationshipLabel>
        <relationshipName>HubSpot_Intelligence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Portal_ID__c</fullName>
        <label>Portal ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Recent_Conversion_Date__c</fullName>
        <label>Recent Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Recent_Conversion_Event__c</fullName>
        <label>Recent Conversion Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Recent_Visit__c</fullName>
        <label>Recent Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Timezone__c</fullName>
        <label>Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Total_Page_Views__c</fullName>
        <label>Total Page Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Unique_Pages_Viewed__c</fullName>
        <label>Unique Pages Viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Website_Visits__c</fullName>
        <label>Website Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HubSpot Intelligence</label>
    <listViews>
        <fullName>HubSpot_Inc__AllIntels</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Intels</label>
    </listViews>
    <listViews>
        <fullName>HubSpot_Inc__Intels</fullName>
        <columns>NAME</columns>
        <columns>HubSpot_Inc__GUID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Intels</label>
    </listViews>
    <nameField>
        <displayFormat>HSI-{000000}</displayFormat>
        <label>HubSpot Intelligence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HubSpot Intelligence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>